--- a/physique spé/Champ magnétostatique et théorème d'Ampère/cours.tex
+++ b/physique spé/Champ magnétostatique et théorème d'Ampère/cours.tex
@@ -56,4 +56,26 @@
     $$N = n \ell$$
 \end{definition}
 
+
+\begin{theoreme}{7.9}{équation locale de Maxwell-Thomson}
+    En tout poit $M$ de l'espace, peut importe le régime~:
+    $$\div \vec{B} = 0$$
+\end{theoreme}
+
+\begin{definition}{7.10}{densité volumique d'énergie magnétique}
+    Un champ magnétique est un réservoir d'énergie. La \notion{densité volumique d'énergie magnétique} s'écrit~:
+    $$w_m = \frac{1}{2}\frac{1}{\mu_0}\norme{\vec{B}}^2$$
+    $w_m$ s'exprime en $\mr{J} \cdot \mr{m}^{-3}$.
+\end{definition}
+
+\begin{definition}{7.11}{inductance propre d'une bobine par le flux}
+    On appelle \notion{inductance propre} d'une bobine de volume traversée par un courant $i$ la grandeur $L$ telle que~:
+    $$\Phi_\mr{p} = Li$$
+    où $\Phi_\mr{p}$ est le flux à travers la bobine du champ magnétique créé par cette bobine.
+\end{definition}
+
+\begin{definition}{7.12}{inductance propre d'une bobine d'un point de vue énergétique}
+    On appelle \notion{inductance propre} d'une bobine de volume interne $V$ traversée par un courant $i$ la grandeur $L$ telle que~:
+    $$\iiint_{V}w_m \d{\tau} = \frac{1}{2}Li^2$$
+\end{definition}
 \input{../../stock/pied.tex}
