--- a/Informatique spé/C06/cours.tex
+++ b/Informatique spé/C06/cours.tex
@@ -38,15 +38,15 @@
     \end{lstC}
 \end{implementation}
 
-\begin{definition}{6.5}{algorithme de Monte-Carlo}
-    Un algorithme probabiliste est dit \notion{de Monte-Carlo} si~: 
+\begin{definition}{6.5}{algorithme de Monte Carlo}
+    Un algorithme probabiliste est dit \notion{de Monte Carlo} si~: 
     \begin{itemize}
         \item il renvoie sous une certaine probabilité une solution correcte ;
         \item son temps d'exécution est constant, indépendant des choix aléatoires. 
     \end{itemize}
 \end{definition}
 
-\begin{implementation}{exemple d'algorithme de Monte-Carlo}
+\begin{implementation}{exemple d'algorithme de Monte Carlo}
     \begin{lstC}
     int monte_carlo(int* t, int taille) {
         for (int i = 0; i < 300; i++){
@@ -59,5 +59,38 @@
     }
     \end{lstC}
 \end{implementation}
+
+\begin{definition}{6.6}{deux types d'algorithmes Monte Carlo pour un problème de décision}
+    Pour un problème de décision (dont la réponse est Vrai ou Faux), on distingue deux catégories d'algorithmes Monte Carlo~: 
+    \begin{enumeratebf}
+        \item \notion{À erreur unilatérale} : pour toute entrée de sortie attendue Vrai, l'algorithme renvoie Vrai presque sûrement (avec une probabilité de 1) et pour une entrée de sortie attendue Faux, l'algorithme renvoie Vrai avec une probabilité non nulle.
+        \item \notion{À erreur bilatérale} : il existe une entrée de sortie attendue Vrai, pour laquelle l'algorithme renvoie Faux avec une probabilité non nulle.
+    \end{enumeratebf}
+\end{definition}
+
+\begin{definition}{6.7}{problème d'optimisation}
+    Un problème d'optimisation est défini pour un \notion{ensemble $I$ d'instances} : les entrées possibles. \\
+    À toute instance $i \in I$ on associe un \notion{ensemble $S_i$ de solutions possibles}. \\
+    À un problème d'optimisation on peut définir une \notion{fonction $f:\bigcup_{i \in I} \to \R_+$ de coût} que l'on cherche soit à minimiser soit à maximiser.\\\\
+    Pour une instance $i \in I$, on cherche $s_\mr{opt} \in S_i$ une solution au coût optimal~:
+    $$\begin{cases*}
+        \forall s \in S_i,\, f(s) \leq f(s_\mr{opt}) &pour de la maximisation \\
+        \forall s \in S_i,\, f(s) \geq f(s_\mr{opt}) &pour de la minimisation
+    \end{cases*}$$
+\end{definition}
+
+\newcommand{\sopt}[0]{s_\mr{opt}}
+\newcommand{\sapprox}[0]{s_\mr{approx}}
+
+
+
+\begin{definition}{6.8}{algorithmes de résolution exacte, d'approximation}
+    Pour un problème d'optimisation, pour une instance $i \in I$, 
+    \begin{enumeratebf}
+        \item un algorithme de résolution exacte est un algorithme qui renvoie $\sopt \in S_i$
+        \item un algorithme d'approximation est un algorithme qui \notion{$\sapprox \in S_i$ une solution approximativement optimale}. On définit alors \notion{$\rho_i(\sapprox)$ le rapport de performance pour l'instance $i$ de $\sapprox$} comme valant~:
+        $$\max\Bigg(\frac{f(\sapprox)}{f(\sopt)},\, \frac{f(\sopt)}{f(\sapprox)}\Bigg)\quad(\geq 1)$$
+    \end{enumeratebf}  
+\end{definition}
 
 \input{../../stock/pied.tex}
