--- a/physique spé/Champ magnétostatique et théorème d'Ampère/cours.tex
+++ b/physique spé/Champ magnétostatique et théorème d'Ampère/cours.tex
@@ -58,7 +58,7 @@
 
 
 \begin{theoreme}{7.9}{équation locale de Maxwell-Thomson}
-    En tout poit $M$ de l'espace, peut importe le régime~:
+    En tout point $M$ de l'espace, peu importe le régime~:
     $$\div \vec{B} = 0$$
 \end{theoreme}
 
