--- a/physique spé/champ electrostatique et theoreme de gauss/cours.tex
+++ b/physique spé/champ electrostatique et theoreme de gauss/cours.tex
@@ -26,7 +26,7 @@
     $$\div \vec{A} = \vnabla \cdot \vec{A}$$
 \end{definition}
 
-\begin{definition}{3.4}{rotationnel d'une fonction vectoriel}
+\begin{definition}{3.4}{rotationnel d'une fonction vectorielle}
     Le \notion{rotationnel d'une fonction vectorielle} $\vec{A}$ correspond au produit vectoriel de $\vnabla$ par $\vec{A}$~:
     $$\rot \vec{A} = \vnabla \wedge \vec{A}$$
 \end{definition}
