--- a/français/spinoza2/cours.tex
+++ b/français/spinoza2/cours.tex
@@ -23,9 +23,37 @@ Spinoza affirme qu'on peut facilement contrôler les corps, mais personne ne peu
 
 Spinoza montre dans cette préface que l'âme humaine est encline à la crédulité, particulièrement dans les crises, car elle projette sur ces craintes ses espoirs et désirs. L'homme préfère spontanément plonger dans des superstitions car c'est plus facile. \\L'individu moyen constitue donc une cible idéale pour la superstition, activement soutenue par les faux profètes, les ministres du culte. Il distingue deux types de religion~:
 \begin{itemize}
-    \item la part essentielle de la religion, notamment en terme de justice et de piété (Eschyle : justice et piété, ce qui caractérise la cité)
+    \item \textit{la part essentielle de la religion}, débouche sur les pratiques de justice et de piété (Eschyle : justice et piété, ce qui caractérise la cité). Elle permet à l'homme de s'élever, d'affirmer son existence propre.
     \item en contrepartie, la religion comme institution autoritaire qui gouverne les foules et propage l'intolérance 
-\end{itemize}\\
-Spinoza explique que la religion cherche à discréditer la politique
+\end{itemize}\\\\
+Spinoza interprète les Écritures divines comme une simple invitation à l'adoration de Dieu. C'est réducteur : il y a là un coup de force en matière d'interprétation de Spinoza. Spinoza donne un second sens à la religion qui lui, ne profère aucun amour de son prochain. C'est une religion autoritaire qui gouverne la foule et propage l'intolérance religieuse.\\ \\
+Au lieu de déboucher sur l'amour, la religion débouche sur l'emprise, la domination des hommes. La religion ainsi conçue réduit les hommes à une multitude aisément gouvernable (il suffit de dire : "C'est Dieu qui le veut"). \\
+Dans le gouvernement monarchique : Spinoza : "Mais si le grand secret du régime monarchique et son intérêt principal, c’est
+de tromper les hommes et de colorer du beau nom de religion la crainte où il faut les tenir asservis, de telle façon qu’ils croient combattre pour leur salut [...]". On est dans des cadres historiques de droit divin, ici la religion prête main forte à la monarchie, elle lui donne un alibi : en obéissant le roi, on s'assure d'aller au paradis. Ce type de religion qui cherche le pouvoir politique, échappe aux finalités de l'État civil.\\
+Le but de l'\etat civil est que chacun mobilise sa raison plutôt que de se laisser guider par ses passions. On parle d'élévation de l'humain au stade rationnel.\\
+Ce type de religion donc, favorise la haine vis-à-vis de ceux qui ne partagent pas la même croyance, contrairement aux écrits divins (Spinoza a été excommunié, avec une haine incommensurable).\\
+"Car les choses en sont venues au point que personne ne peut guère plus distinguer un chrétien d’un Turc, d’un juif, d’un païen que par 1a forme extérieure et le vêtement, ou bien en sachant quelle église il fréquente, ou enfin qu’il est attaché à tel ou tel sentiment, et jure sur la parole de tel ou tel maître. Mais quant à la pratique de la vie, je ne vois entre eux aucune différence." : Rien ne distingue les hommes d'autre que leur obédiance, la seule et unique différence entres les hommes est leurs rites.\n
+" C’est ainsi que les abus sont entrés dans l’Église, et qu’on a vu les derniers des hommes animés d’une prodigieuse ambition de s’emparer du sacerdoce, le zèle de la propagation de la foi se tourner en ambition et en avarice sordide, le temple devenir un théâtre où l’on entend non pas des docteurs ecclésiastiques, mais des orateurs dont aucun ne se soucie d’instruire le peuple, mais seulement de s’en faire admirer, de le captiver en s’écartant de la doctrine commune, de lui enseigner des nouveautés et des choses extraordinaires qui le frappent d’admiration." : c'est toujours les salauds qu'on voit en profète.\\
+Spinoza critique qu'au lieu de l'adoration de Dieu, il n'observe chez les religieux que l'adulation (l'idolatrie : un culte superficiel, superstitieux, ou encore fanatique, qui veut détruire toute autre forme de croyance). Spinoza illustre ça avec le texte du Nouveau Testament où Pilatre veut crucifier Jésus, juste pour satisfaire les Pharysiens, qui ne supportaient pas que le Christ se proclame profète. On a là une forme d'extrémisme dans l'intolérance religieuse. En fait, l'église attire les passions les pires, empêche l'accès à la raison, car elle favorise le sectarisme.\\
+Spinoza déduit de tous ces constats qu'il est nécessaire de séparer l'\etat et l'église : il faut une stricte démarquation des deux ordres. pour conduire à une certaine forme de laïcité (fait de permettre à chacun de penser comme il l'entend, et donc de respecter la pluralité des cultes). La religion ferait ombre (via l'obscurantisme) à la lumière naturelle des individus.\\\\
+
+
+Lorsqu'une Église prend le pouvoir de cette façon-là, il est très vulnérable car peuvent se former des factions (induites par les courants opposés) : c'est ce que Spinoza démontre dans le chapitre XVIII avec l'histoire du peuple hébreu. Moïse incarne le pouvoir religieux et politique. Mais à un moment Moïse doit déléguer le pouvoir religieux. Alors, c'est le début de la fin car la parole divine dépend de la souveraineté politique : la recherche de la puissance détermine entièrement le pouvoirr religieux. Mais comme toutes les factions veulent le pouvoir religieux, les factions ne vont faire que se combattre pour avoir le pouvoir politique, d'où un enchaînement sans fin de guerres civiles.
+Le judaïsme s'oppose au christianisme car le judaïsme est lié à un peuple et un territoire tandis que le christianisme a une vocation d'emblée universelle. Le judaïsme est très isolant car on ne doit pas faire de commerce avec les impies (les étrangers, les mécréants) : le rayonnement internationnal du judaïsme est impossible !\\
+"Mais il suffît de considérer l’origine de la religion chrétienne pour voir apparaître manifestement la cause que nous cherchons. Ce ne furent pas, en effet, des rois qui enseignèrent les premiers la religion chrétienne, mais bien de  simples particuliers, qui, contre la volonté de ceux qui avaient le pouvoir en main et dont ils étaient les sujets, prirent l’habitude de haranguer le peuple dans des églises particulières, d’instituer les cérémonies sacrées, d’administrer, d’ordonner, de régler ce qui concernait le culte, et tout cela à eux seuls et sans tenir compte du gouvernement." : dès le début le christianisme est une religion d'émancipation, de résistance, là où les autres sont l'inverse.
+
+\section{L'histoire des hébreux}
+
+Partie centrale du texte (XVII et XVIII) qui repose sur l'interprétation de l'Ancien Testament.\\\\
+
+Spinoza évoque ce moment où les hébreux sont chassés d'Égypte. Il présente Moïse comme un roi qui a plié l'autorité divine au besoin de sécurité de l'État. Moïse était dépositaire de l'autorité divine car d'après la prophétie biblique il était celui à qui Dieu se révélait. De là, Spinoza évoque la fuite d'Égypte comme un état de nature : c'est le moment où le peuple hébreu doit décider de son sort. Or cet état de nature est hypothétique : un état dans lequel l'homme vit sans état fondé. C'est un moment historique, transmis par les écritures. Cette histoire permet à Spinoza d'évoquer la sortie de l'état de nature du peuple hébreu, en deux étapes~:
+\begin{enumerate}
+    \item les hébreux transfèrent leur droit de nature à Dieu : il devient leur roi, l'État n'est autre que le Royaume de Dieu, et ce dernier appelle à une fidélité d'ordre religieux. Pourtant, comment connaître la volonté de Dieu, quand on n'est pas Moïse ? En fait, selon la déduction de Spinoza des écrits, la pensée de Dieu est réduite à la conjecture qu'on en a. Cette théocratie est donc en réalité une démocratie, car chacun connaît la volonté de Dieu. Le pouvoir remis à Dieu est donc en réalité le pouvoir de personne.\\
+    "Or Dieu n’a-t-il pas déclaré par les apôtres que désormais l’alliance de la Divinité avec l’homme ne serait écrite ni avec de l’encre, ni sur des tables de pierre, mais dans le cœur de chacun par l’Esprit divin ?" : Dieu prend la forme d'une démocratie puisque chacun en décide. Le \textbf{problème} est que cela fonctionne pour un petit groupe d'individus, quand la communauté grossit, les désaccords se multiplie et au final, tout le monde considère les autres comme impies (dépourvus de piété).
+    \item les Hébreux transfèrent le pouvoir délégué à Dieu (donc à eux mêmes, on l'a vu) à Moïse : la démocratie induite se change alors en monarchie. Le propre de Moïse est alors à la fois chef religieux, et chef politique. Il est le seul à pouvoir consulter Dieu, mais lui fait en sorte de soumettre le religieux au politique : le religieux dépend alors du politique car Moïse étant roi, c'est à lui que revient le droit d'appliquer la volonté de Dieu. Pourtant Moïse ne peut empêcher l'apparition de Pontifes qui croient différement et veulent mobiliser pour détrôner le roi (ça explose à partir de la mort de Moïse). Il en résulte une période de guerres civiles qui causeront à terme la destruction de l'État hébreu.
+
+\end{enumerate}
+
+\\Spinoza a insisté sur ces deux pactes : transfert de la souveraineté à Dieu, puis transfert à Moïse. Dans les deux cas, il advient que la volonté divine est détournée, soumise à une volonté humaine (toutes, puis une seule). Le pouvoir religieux est un facteur de division majeur car il règne sur les âmes. Un pouvoir autoritaire régnant sur les corps finirait toujours par être renversé mais le pouvoir religieux, qui exerce son emprise sur les âmes, empêche de penser rationnellement, attise les passions, et en est donc destructeur.
 
 \end{document}
