--- a/français/spinoza3/cours.tex
+++ b/français/spinoza3/cours.tex
@@ -31,5 +31,5 @@ Spinoza se demande donc comment la communauté peut s'ouvrir à la pluralité, a
 \section{Le contrat social Spinoziste}
 
 Titre du chapitre XVI : "Des fondements de l'". Spinoza s'oppose à la théorie naturaliste de Hobbes et Rousseau. Chez ces deux philosophes, l'État est fondé sur la base d'un état de nature : à l'origine, les hommes y auraient vécu (hypothétiquement). Hobbes pense que l'insécurité y était omni-présente, le chaos partout. Rousseau pense que l'homme est bon à l'état de nature et pense que c'est la société qui corrompt. Chez les deux portant, il y a rupture de l'état de nature à l'état politique. \\
-Spinoza diffère de cet approche. Selon lui, quelque chose relevant de l'état de nature doit subsister en nous : toutes les créatures vivantes sont animées par leur volonté de puissance, d'épanouissement (cf. \textit{connatus}). Ceci constitue notre volonté première commune. On ne peut alors imaginer que c'est derrière nous, car manifestement c'est en nous : on ne se rend compte de ce qu'on a que quand on l'a perdu.
+Spinoza diffère de cet approche. Selon lui, quelque chose relevant de l'état de nature doit subsister en nous : toutes les créatures vivantes sont animées par leur volonté de puissance, d'épanouissement (cf. \textit{connatus}). Ceci constitue notre volonté première commune. On ne peut alors imaginer que c'est derrière nous, car manifestement c'est en nous : on ne se rend compte de ce qu'on a que quand on l'a perdu. Comment harmoniser donc cette condition ? On débouche sur la notion de démocratie, régime qui permettrait de respecter ce droit naturel, tout en permettant 
 \end{document}
