--- a/truc.tex
+++ b/truc.tex
@@ -1,30 +1,7 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
-\usepackage{array}
-
+\usepackage{graphicx}
 \begin{document}
-
-\begin{table}[h!]
-\centering
-\begin{tabular}{|c|c|c|c|c|}
-\hline
-\textbf{temps} & \textbf{température} & \textbf{humidité} & \textbf{vent} & \textbf{jouer} \\ \hline
-ensoleillé & chaude & haute    & non & non \\ \hline
-ensoleillé & chaude & haute    & oui & non \\ \hline
-nuageux    & chaude & haute    & non & oui \\ \hline
-pluvieux   & douce  & haute    & non & non \\ \hline
-pluvieux   & fraîche & normale & non & oui \\ \hline
-pluvieux   & fraîche & normale & oui & oui \\ \hline
-nuageux    & fraîche & normale & oui & oui \\ \hline
-ensoleillé & douce  & haute    & non & non \\ \hline
-ensoleillé & fraîche & normale & non & oui \\ \hline
-pluvieux   & douce  & normale & non & oui \\ \hline
-ensoleillé & douce  & normale & oui & oui \\ \hline
-nuageux    & douce  & haute    & oui & oui \\ \hline
-nuageux    & chaude & normale  & non & oui \\ \hline
-pluvieux   & douce  & haute    & oui & non \\ \hline
-\end{tabular}
-\caption{Tableau des données météorologiques et activité}
-\end{table}
-
+\Huge % Vous pouvez ajuster la taille avec \huge, \LARGE, etc.
+ï : ; é i j ? ! =
 \end{document}
